# fabric

./: .env_example  .gitignore  CLAUDE.md  README.md  config.py  config.yaml  external_models.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
dlt/northwind/: northwind.py
fabric/: .gitignore
fabric/Retrieve Codebase v2.Notebook/: .platform  notebook-content.py
fabric/Retrieve Codebase.Notebook/: .platform  notebook-content.py
fabric/SQLMesh Runner.Notebook/: .platform  notebook-content.py
fabric/Secrets_v2.VariableLibrary/: .platform
fabric/dab.Warehouse/: .platform  dab.sqlproj  xmla.json
fabric/dab.Warehouse/hook/: hook.sql
fabric/dab.Warehouse/hook__dev__insert_only_new_hashes/: hook__dev__insert_only_new_hashes.sql
fabric/dab.Warehouse/hook__dev__qualify_hashes_in_raw/: hook__dev__qualify_hashes_in_raw.sql
fabric/dar.Warehouse/: .platform  dar.sqlproj
fabric/das.Warehouse/: .platform  das.sqlproj  xmla.json
fabric/dlt & SQLMesh Runner.Notebook/: .platform  notebook-content.py
fabric/dlt Runner.Notebook/: .platform  notebook-content.py
fabric/landing_zone.Lakehouse/: .platform
fabric/sqlmesh.SQLDatabase/: .platform  sqlmesh.sqlproj
macros/: record_windows.py  to_timestamp.py  union_all_by_name.py
models/das/: external_models.sql  scd_blueprint.sql
notebooks/: SQLMesh Runner.ipynb  dlt & SQLMesh Runner.ipynb
pipelines/: northwind.py
sqlmesh/: config.py  external_models.yaml
sqlmesh/macros/: to_timestamp.py
sqlmesh/models/: external_model_blueprint.sql
(+1819 files in other folders)
