[project]
name = "fabric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake<1.0",
    "dlt[az,deltalake,filesystem,parquet]>=1.11.0",
    "enlighten>=1.14.1",
    "sqlmesh[mssql-odbc, lsp] @ git+https://github.com/fresioAS/sqlmesh.git@add_fabric_warehouse",
]

[tool.uv]
override-dependencies = [
    "sqlglot @ git+https://github.com/mattiasthalen/sqlglot.git",
]